# Multi-Agent-Co-Work

./: .bandit  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  COMMANDS.md  INSTALL.md  PRODUCTION-READINESS.md  README.md  README.zh-TW.md  SELF-REVIEW.md  SKILL.md  package-lock.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: python-checks.yml
adapters/claude-code/: README.md
adapters/codex/: README.md
config/: default.toml  production-example.toml
docs/: TUTORIAL-EN.md  TUTORIAL-ZH-TW.md
examples/: bugfix.md  feature.md  known-failures.json  refactor.md  task.md
prompts/: explorer.md  implementer.md  orchestrator.md  planner.md  reviewer.md  verifier.md
references/: communication-protocol.md  decision-gates.md  explore-convergence.md  flaky-verification-playbook.md  handoff-packet-spec.md  intervention-matrix.md  scope-extension-protocol.md
runtime/: artifacts.py  config.py  maw.py  models.py  orchestrator.py  prompting.py  routing_memory.py  state_machine.py  streaming.py  utils.py  watcher.py
schemas/: agent_result.schema.json
scripts/: collect_context.sh  install_claude.sh  install_codex.sh  install_gemini.sh  run_checks.sh  run_example.sh  summarize_diff.sh
templates/: exploration-report.md  implementation-plan.md  review-report.md  task-brief.md  verification-report.md
tests/: test_codex_parser.py  test_config_and_routing.py  test_config_load.py  test_gemini_parser.py  test_handoff.py  test_orchestrator_gate.py  test_shell_verifier.py  test_state_machine.py  test_timeout_handling.py
(+47 files in other folders)
