[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-cowork"
version = "3.0.0"
description = "Cross-CLI multi-agent orchestration runtime for Codex CLI, Claude Code, and Gemini CLI."
requires-python = ">=3.11"

[tool.setuptools]
packages = ["runtime", "runtime.providers"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
    "safety>=2.3.5",
    "types-setuptools"
]

[tool.flake8]
max-line-length = 150
extend-ignore = "E203"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
